# ds_self_practice

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 0_Other.ipynb  1_Linear_Models.ipynb  2_Trees.ipynb  5_Models_Calibration.ipynb  6_Feature_Importance.ipynb  7_Optimizations.ipynb
