[tool.poetry]
name = "ds-self-practice"
version = "0.1.0"
description = ""
authors = ["Arist0craft <dimnktn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I",
    "E",
    "W",
    "F"
]
ignore = [
    "E501"
]

# Ruff VsCode Extension by some reason gave me a bug with sorting imports in Notebooks
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"