[project]
name = "ds-self-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "ruff>=0.9.7",
]



[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I",
    "E",
    "W",
    "F"
]
ignore = [
    "E501",
    "W293"
]

# Ruff VsCode Extension by some reason gave me a bug with sorting imports in Notebooks
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["I001", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"